# DesafiosDioC-CPP

./: CMakeLists.txt  README.md
src/formacao_c_cpp_developer/: BibliotecaVirtualComAjudaDeRobosOrganizadores.c  BibliotecaVirtualComAjudaDeRobosOrganizadores.md  ConstruindoUmExercitoDeRobos.cpp  ConstruindoUmExercitoDeRobos.md  ControleDeTrafegoUrbanoParaUmaCidadeInteligente.c  ControleDeTrafegoUrbanoParaUmaCidadeInteligente.md  ControleDeVelocidadeDoRobo.cpp  ControleDeVelocidadeDoRobo.md  ConversandoComOChatGPT.c  ConversandoComOChatGPT.md  CriandoUmRoboParaAutomacaoDeFabrica.c  CriandoUmRoboParaAutomacaoDeFabrica.md  DescubraACarta.cpp  DescubraACarta.md  DesenvolvendoSuaPrimeiraInteligênciaArtificial.c  DesenvolvendoSuaPrimeiraInteligênciaArtificial.md  DesenvolvendoUmProgramaParaUmaLojaDeCogumelos.c  DesenvolvendoUmProgramaParaUmaLojaDeCogumelos.md  DeteccaoDeRiscoDeDiabetesComIA.c  DeteccaoDeRiscoDeDiabetesComIA.md  InformacoesDeProdutosDeLojaVirtual.cpp  InformacoesDeProdutosDeLojaVirtual.md  ORoboInteligente.c  ORoboInteligente.md  ORoboQueCalculaDistancias.c  ORoboQueCalculaDistancias.md  PrimeiroDesafioComPOO.cpp  PrimeiroDesafioComPOO.md  ProgramandoSeuPrimeiroRobo.c  ProgramandoSeuPrimeiroRobo.md
src/formação_iot_specialist/: CalculadoraBasica.c  CalculadoraBasica.md  FabricaDeBoneco.c  FabricaDeBoneco.md  GratificacaoCobrada.c  GratificacaoCobrada.md  MediaDeTresValores.c  MediaDeTresValores.md  QualEhMaisBarato.c  QualEhMaisBarato.md  QuantasFrutasLevar.c  QuantasFrutasLevar.md
