cmake_minimum_required(VERSION 3.29)
project(DesafiosDioC)

set(CMAKE_CXX_STANDARD 20)

add_executable(DesafiosDioC
        src/formacao_c_cpp_developer/PrimeiroDesafioComPOO.cpp
        src/formacao_c_cpp_developer/ControleDeVelocidadeDoRobo.cpp
        src/formacao_c_cpp_developer/InformacoesDeProdutosDeLojaVirtual.cpp
        src/formacao_c_cpp_developer/ConstruindoUmExercitoDeRobos.cpp
        src/formacao_c_cpp_developer/DescubraACarta.cpp
        src/formação_iot_specialist/MediaDeTresValores.c
        src/formação_iot_specialist/GratificacaoCobrada.c
        src/formação_iot_specialist/FabricaDeBoneco.c
        src/formação_iot_specialist/QuantasFrutasLevar.c
        src/formação_iot_specialist/QualEhMaisBarato.c
        src/formação_iot_specialist/CalculadoraBasica.c
        src/formacao_c_cpp_developer/BibliotecaVirtualComAjudaDeRobosOrganizadores.c
        src/formacao_c_cpp_developer/ControleDeTrafegoUrbanoParaUmaCidadeInteligente.c
        src/formacao_c_cpp_developer/ConversandoComOChatGPT.c
        src/formacao_c_cpp_developer/CriandoUmRoboParaAutomacaoDeFabrica.c
        src/formacao_c_cpp_developer/DesenvolvendoSuaPrimeiraInteligênciaArtificial.c
        src/formacao_c_cpp_developer/DesenvolvendoUmProgramaParaUmaLojaDeCogumelos.c
        src/formacao_c_cpp_developer/DeteccaoDeRiscoDeDiabetesComIA.c
        src/formacao_c_cpp_developer/ORoboInteligente.c
        src/formacao_c_cpp_developer/ORoboQueCalculaDistancias.c
        src/formacao_c_cpp_developer/ProgramandoSeuPrimeiroRobo.c)
